<resources>
    <string name="app_name">Barcode Shopper</string>

    <string name="err_permission_not_granted">Camera permission is needed.</string>
    <string name="title_activity_camera_preview">CameraPreviewActivity</string>

    <string name="result_product_not_detected">Product Not Detected</string>
    <string name="read_product_code">Read Product Code</string>
    <string name="enter_custom_value_header">Name:</string>
    <string name="UPCcode">UPC:</string>
    <string name="Custom_Item_Header">Product Editor</string>
    <string name="AddItemBtn">SAVE</string>
    <string name="AlertDialogTitle">Add New Item</string>
    <string name="AlertDialogMessage">Add New UPC Barcode Item?</string>
    <string name="CancelBtn">Cancel</string>
    <string name="FinishPreview">Finish Preview</string>
    <string name="barcode">barcode</string>
    <string name="carttotal">Cart Total: </string>
    <string name="totalvalue">$0.00</string>
    <string name="editButtonId">editBtn</string>
    <string name="saveitem">Save Item</string>
    <string name="item_price">Price:</string>
    <string name="price_hint">Enter Item Price</string>
    <string name="item_name_hint">Enter Item Name</string>
    <string name="upc_entry_hint">Enter Item UPC Code</string>
    <string name="delete">Delete</string>
    <string name="qty">Qty:</string>
    <string name="item_qty_hint">Enter Item Qty</string>
    <string name="about_header"></string>
    <string name="JaceeyAbout">Jaceey Tuck</string>
    <string name="JaceeyEmail">J_tuck@fanshaweonline.ca</string>
    <string name="KevinAbout">Kevin Jarocki</string>
    <string name="KevinEmail">k_jarocki@fanshaweonline.ca</string>
    <string name="AboutIntro">Barcode Shopper Developed and Designed By:</string>
    <string name="Back">Back</string>
    <string name="back">back</string>
</resources>